CkuraCompiler/include/grammar/CkuraParser.cpp

// Generated from .\CkuraParser.g4 by ANTLR 4.11.1


#include "CkuraParserVisitor.h"

#include "CkuraParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CkuraParserStaticData final {
  CkuraParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CkuraParserStaticData(const CkuraParserStaticData&) = delete;
  CkuraParserStaticData(CkuraParserStaticData&&) = delete;
  CkuraParserStaticData& operator=(const CkuraParserStaticData&) = delete;
  CkuraParserStaticData& operator=(CkuraParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag ckuraparserParserOnceFlag;
CkuraParserStaticData *ckuraparserParserStaticData = nullptr;

void ckuraparserParserInitialize() {
  assert(ckuraparserParserStaticData == nullptr);
  auto staticData = std::make_unique<CkuraParserStaticData>(
    std::vector<std::string>{
      "literalValue", "expression", "declareVariable", "defineVariable", 
      "functionBody", "functionDeclareVariable", "functionArgument", "functionHead", 
      "functionReturn", "defineFunction", "functionCall", "statement", "block", 
      "unit", "module"
    },
    std::vector<std::string>{
      "", "'_'", "':'", "';'", "'\"'", "','", "'('", "')'", "'{'", "'}'", 
      "'->'", "'='", "'=='", "'!='", "'>'", "'<'", "'-'", "'.'", "'**'", 
      "'*'", "'/'", "'%'", "'+'", "'and'", "'or'", "'    '", "'return'"
    },
    std::vector<std::string>{
      "", "UNDERLINE", "COLON", "SEMI_COLON", "QUOTE", "COMMA", "OPEN_PAREN", 
      "CLOSE_PAREN", "OPEN_BRACE", "CLOSE_BRACE", "ARROW", "EQ", "EQUAL", 
      "NOT_EQ", "GREATER_THAN", "LESS_THAN", "MINUS", "DOT", "POWER", "STAR", 
      "DIV", "MOD", "ADD", "AND", "OR", "INDENT", "RETURN", "Comment", "WS", 
      "Id", "String", "Number"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  ckuraparserParserStaticData = staticData.release();
}

}

CkuraParser::CkuraParser(TokenStream *input) : CkuraParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CkuraParser::CkuraParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CkuraParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *ckuraparserParserStaticData->atn, ckuraparserParserStaticData->decisionToDFA, ckuraparserParserStaticData->sharedContextCache, options);
}

CkuraParser::~CkuraParser() {
  delete _interpreter;
}

const atn::ATN& CkuraParser::getATN() const {
  return *ckuraparserParserStaticData->atn;
}

std::string CkuraParser::getGrammarFileName() const {
  return "CkuraParser.g4";
}

const std::vector<std::string>& CkuraParser::getRuleNames() const {
  return ckuraparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& CkuraParser::getVocabulary() const {
  return ckuraparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CkuraParser::getSerializedATN() const {
  return ckuraparserParserStaticData->serializedATN;
}


//----------------- LiteralValueContext ------------------------------------------------------------------

CkuraParser::LiteralValueContext::LiteralValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CkuraParser::LiteralValueContext::getRuleIndex() const {
  return CkuraParser::RuleLiteralValue;
}

void CkuraParser::LiteralValueContext::copyFrom(LiteralValueContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- NumberContext ------------------------------------------------------------------

tree::TerminalNode* CkuraParser::NumberContext::Number() {
  return getToken(CkuraParser::Number, 0);
}

CkuraParser::NumberContext::NumberContext(LiteralValueContext *ctx) { copyFrom(ctx); }


std::any CkuraParser::NumberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CkuraParserVisitor*>(visitor))
    return parserVisitor->visitNumber(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StringContext ------------------------------------------------------------------

tree::TerminalNode* CkuraParser::StringContext::String() {
  return getToken(CkuraParser::String, 0);
}

CkuraParser::StringContext::StringContext(LiteralValueContext *ctx) { copyFrom(ctx); }


std::any CkuraParser::StringContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CkuraParserVisitor*>(visitor))
    return parserVisitor->visitString(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IdContext ------------------------------------------------------------------

tree::TerminalNode* CkuraParser::IdContext::Id() {
  return getToken(CkuraParser::Id, 0);
}

CkuraParser::IdContext::IdContext(LiteralValueContext *ctx) { copyFrom(ctx); }


std::any CkuraParser::IdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CkuraParserVisitor*>(visitor))
    return parserVisitor->visitId(this);
  else
    return visitor->visitChildren(this);
}
CkuraParser::LiteralValueContext* CkuraParser::literalValue() {
  LiteralValueContext *_localctx = _tracker.createInstance<LiteralValueContext>(_ctx, getState());
  enterRule(_localctx, 0, CkuraParser::RuleLiteralValue);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(33);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CkuraParser::String: {
        _localctx = _tracker.createInstance<CkuraParser::StringContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(30);
        match(CkuraParser::String);
        break;
      }

      case CkuraParser::Number: {
        _localctx = _tracker.createInstance<CkuraParser::NumberContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(31);
        match(CkuraParser::Number);
        break;
      }

      case CkuraParser::Id: {
        _localctx = _tracker.createInstance<CkuraParser::IdContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(32);
        match(CkuraParser::Id);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

CkuraParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CkuraParser::ExpressionContext::getRuleIndex() const {
  return CkuraParser::RuleExpression;
}

void CkuraParser::ExpressionContext::copyFrom(ExpressionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- MultiLevelContext ------------------------------------------------------------------

std::vector<CkuraParser::ExpressionContext *> CkuraParser::MultiLevelContext::expression() {
  return getRuleContexts<CkuraParser::ExpressionContext>();
}

CkuraParser::ExpressionContext* CkuraParser::MultiLevelContext::expression(size_t i) {
  return getRuleContext<CkuraParser::ExpressionContext>(i);
}

tree::TerminalNode* CkuraParser::MultiLevelContext::STAR() {
  return getToken(CkuraParser::STAR, 0);
}

tree::TerminalNode* CkuraParser::MultiLevelContext::DIV() {
  return getToken(CkuraParser::DIV, 0);
}

tree::TerminalNode* CkuraParser::MultiLevelContext::MOD() {
  return getToken(CkuraParser::MOD, 0);
}

CkuraParser::MultiLevelContext::MultiLevelContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any CkuraParser::MultiLevelContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CkuraParserVisitor*>(visitor))
    return parserVisitor->visitMultiLevel(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FuncCallLevelContext ------------------------------------------------------------------

CkuraParser::FunctionCallContext* CkuraParser::FuncCallLevelContext::functionCall() {
  return getRuleContext<CkuraParser::FunctionCallContext>(0);
}

CkuraParser::FuncCallLevelContext::FuncCallLevelContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any CkuraParser::FuncCallLevelContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CkuraParserVisitor*>(visitor))
    return parserVisitor->visitFuncCallLevel(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ParenLevelContext ------------------------------------------------------------------

tree::TerminalNode* CkuraParser::ParenLevelContext::OPEN_PAREN() {
  return getToken(CkuraParser::OPEN_PAREN, 0);
}

CkuraParser::ExpressionContext* CkuraParser::ParenLevelContext::expression() {
  return getRuleContext<CkuraParser::ExpressionContext>(0);
}

tree::TerminalNode* CkuraParser::ParenLevelContext::CLOSE_PAREN() {
  return getToken(CkuraParser::CLOSE_PAREN, 0);
}

CkuraParser::ParenLevelContext::ParenLevelContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any CkuraParser::ParenLevelContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CkuraParserVisitor*>(visitor))
    return parserVisitor->visitParenLevel(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LiteralLevelContext ------------------------------------------------------------------

CkuraParser::LiteralValueContext* CkuraParser::LiteralLevelContext::literalValue() {
  return getRuleContext<CkuraParser::LiteralValueContext>(0);
}

CkuraParser::LiteralLevelContext::LiteralLevelContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any CkuraParser::LiteralLevelContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CkuraParserVisitor*>(visitor))
    return parserVisitor->visitLiteralLevel(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AddLevelContext ------------------------------------------------------------------

std::vector<CkuraParser::ExpressionContext *> CkuraParser::AddLevelContext::expression() {
  return getRuleContexts<CkuraParser::ExpressionContext>();
}

CkuraParser::ExpressionContext* CkuraParser::AddLevelContext::expression(size_t i) {
  return getRuleContext<CkuraParser::ExpressionContext>(i);
}

tree::TerminalNode* CkuraParser::AddLevelContext::ADD() {
  return getToken(CkuraParser::ADD, 0);
}

tree::TerminalNode* CkuraParser::AddLevelContext::MINUS() {
  return getToken(CkuraParser::MINUS, 0);
}

CkuraParser::AddLevelContext::AddLevelContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any CkuraParser::AddLevelContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CkuraParserVisitor*>(visitor))
    return parserVisitor->visitAddLevel(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MinusLevelContext ------------------------------------------------------------------

tree::TerminalNode* CkuraParser::MinusLevelContext::MINUS() {
  return getToken(CkuraParser::MINUS, 0);
}

CkuraParser::LiteralValueContext* CkuraParser::MinusLevelContext::literalValue() {
  return getRuleContext<CkuraParser::LiteralValueContext>(0);
}

CkuraParser::MinusLevelContext::MinusLevelContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any CkuraParser::MinusLevelContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CkuraParserVisitor*>(visitor))
    return parserVisitor->visitMinusLevel(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PowerLevelContext ------------------------------------------------------------------

std::vector<CkuraParser::ExpressionContext *> CkuraParser::PowerLevelContext::expression() {
  return getRuleContexts<CkuraParser::ExpressionContext>();
}

CkuraParser::ExpressionContext* CkuraParser::PowerLevelContext::expression(size_t i) {
  return getRuleContext<CkuraParser::ExpressionContext>(i);
}

tree::TerminalNode* CkuraParser::PowerLevelContext::POWER() {
  return getToken(CkuraParser::POWER, 0);
}

CkuraParser::PowerLevelContext::PowerLevelContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any CkuraParser::PowerLevelContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CkuraParserVisitor*>(visitor))
    return parserVisitor->visitPowerLevel(this);
  else
    return visitor->visitChildren(this);
}
//----------------- OrLevelContext ------------------------------------------------------------------

std::vector<CkuraParser::ExpressionContext *> CkuraParser::OrLevelContext::expression() {
  return getRuleContexts<CkuraParser::ExpressionContext>();
}

CkuraParser::ExpressionContext* CkuraParser::OrLevelContext::expression(size_t i) {
  return getRuleContext<CkuraParser::ExpressionContext>(i);
}

tree::TerminalNode* CkuraParser::OrLevelContext::OR() {
  return getToken(CkuraParser::OR, 0);
}

CkuraParser::OrLevelContext::OrLevelContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any CkuraParser::OrLevelContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CkuraParserVisitor*>(visitor))
    return parserVisitor->visitOrLevel(this);
  else
    return visitor->visitChildren(this);
}
//----------------- EqLevelContext ------------------------------------------------------------------

std::vector<CkuraParser::ExpressionContext *> CkuraParser::EqLevelContext::expression() {
  return getRuleContexts<CkuraParser::ExpressionContext>();
}

CkuraParser::ExpressionContext* CkuraParser::EqLevelContext::expression(size_t i) {
  return getRuleContext<CkuraParser::ExpressionContext>(i);
}

tree::TerminalNode* CkuraParser::EqLevelContext::EQUAL() {
  return getToken(CkuraParser::EQUAL, 0);
}

tree::TerminalNode* CkuraParser::EqLevelContext::NOT_EQ() {
  return getToken(CkuraParser::NOT_EQ, 0);
}

tree::TerminalNode* CkuraParser::EqLevelContext::GREATER_THAN() {
  return getToken(CkuraParser::GREATER_THAN, 0);
}

tree::TerminalNode* CkuraParser::EqLevelContext::LESS_THAN() {
  return getToken(CkuraParser::LESS_THAN, 0);
}

CkuraParser::EqLevelContext::EqLevelContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any CkuraParser::EqLevelContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CkuraParserVisitor*>(visitor))
    return parserVisitor->visitEqLevel(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AndLevelContext ------------------------------------------------------------------

std::vector<CkuraParser::ExpressionContext *> CkuraParser::AndLevelContext::expression() {
  return getRuleContexts<CkuraParser::ExpressionContext>();
}

CkuraParser::ExpressionContext* CkuraParser::AndLevelContext::expression(size_t i) {
  return getRuleContext<CkuraParser::ExpressionContext>(i);
}

tree::TerminalNode* CkuraParser::AndLevelContext::AND() {
  return getToken(CkuraParser::AND, 0);
}

CkuraParser::AndLevelContext::AndLevelContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any CkuraParser::AndLevelContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CkuraParserVisitor*>(visitor))
    return parserVisitor->visitAndLevel(this);
  else
    return visitor->visitChildren(this);
}

CkuraParser::ExpressionContext* CkuraParser::expression() {
   return expression(0);
}

CkuraParser::ExpressionContext* CkuraParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  CkuraParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  CkuraParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, CkuraParser::RuleExpression, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(44);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<FuncCallLevelContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(36);
      functionCall();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<LiteralLevelContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(37);
      literalValue();
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<ParenLevelContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(38);
      match(CkuraParser::OPEN_PAREN);
      setState(39);
      expression(0);
      setState(40);
      match(CkuraParser::CLOSE_PAREN);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<MinusLevelContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(42);
      match(CkuraParser::MINUS);
      setState(43);
      literalValue();
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(66);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(64);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<PowerLevelContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(46);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(47);
          antlrcpp::downCast<PowerLevelContext *>(_localctx)->op = match(CkuraParser::POWER);
          setState(48);
          expression(8);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<MultiLevelContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(49);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(50);
          antlrcpp::downCast<MultiLevelContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & 3670016) != 0)) {
            antlrcpp::downCast<MultiLevelContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(51);
          expression(7);
          break;
        }

        case 3: {
          auto newContext = _tracker.createInstance<AddLevelContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(52);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(53);
          antlrcpp::downCast<AddLevelContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == CkuraParser::MINUS

          || _la == CkuraParser::ADD)) {
            antlrcpp::downCast<AddLevelContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(54);
          expression(6);
          break;
        }

        case 4: {
          auto newContext = _tracker.createInstance<EqLevelContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(55);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(56);
          antlrcpp::downCast<EqLevelContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & 61440) != 0)) {
            antlrcpp::downCast<EqLevelContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(57);
          expression(4);
          break;
        }

        case 5: {
          auto newContext = _tracker.createInstance<AndLevelContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(58);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(59);
          antlrcpp::downCast<AndLevelContext *>(_localctx)->op = match(CkuraParser::AND);
          setState(60);
          expression(3);
          break;
        }

        case 6: {
          auto newContext = _tracker.createInstance<OrLevelContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(61);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(62);
          antlrcpp::downCast<OrLevelContext *>(_localctx)->op = match(CkuraParser::OR);
          setState(63);
          expression(2);
          break;
        }

        default:
          break;
        } 
      }
      setState(68);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- DeclareVariableContext ------------------------------------------------------------------

CkuraParser::DeclareVariableContext::DeclareVariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CkuraParser::ExpressionContext* CkuraParser::DeclareVariableContext::expression() {
  return getRuleContext<CkuraParser::ExpressionContext>(0);
}

tree::TerminalNode* CkuraParser::DeclareVariableContext::Id() {
  return getToken(CkuraParser::Id, 0);
}


size_t CkuraParser::DeclareVariableContext::getRuleIndex() const {
  return CkuraParser::RuleDeclareVariable;
}


std::any CkuraParser::DeclareVariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CkuraParserVisitor*>(visitor))
    return parserVisitor->visitDeclareVariable(this);
  else
    return visitor->visitChildren(this);
}

CkuraParser::DeclareVariableContext* CkuraParser::declareVariable() {
  DeclareVariableContext *_localctx = _tracker.createInstance<DeclareVariableContext>(_ctx, getState());
  enterRule(_localctx, 4, CkuraParser::RuleDeclareVariable);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    expression(0);
    setState(70);
    match(CkuraParser::Id);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefineVariableContext ------------------------------------------------------------------

CkuraParser::DefineVariableContext::DefineVariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CkuraParser::DeclareVariableContext* CkuraParser::DefineVariableContext::declareVariable() {
  return getRuleContext<CkuraParser::DeclareVariableContext>(0);
}

tree::TerminalNode* CkuraParser::DefineVariableContext::EQ() {
  return getToken(CkuraParser::EQ, 0);
}

CkuraParser::ExpressionContext* CkuraParser::DefineVariableContext::expression() {
  return getRuleContext<CkuraParser::ExpressionContext>(0);
}


size_t CkuraParser::DefineVariableContext::getRuleIndex() const {
  return CkuraParser::RuleDefineVariable;
}


std::any CkuraParser::DefineVariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CkuraParserVisitor*>(visitor))
    return parserVisitor->visitDefineVariable(this);
  else
    return visitor->visitChildren(this);
}

CkuraParser::DefineVariableContext* CkuraParser::defineVariable() {
  DefineVariableContext *_localctx = _tracker.createInstance<DefineVariableContext>(_ctx, getState());
  enterRule(_localctx, 6, CkuraParser::RuleDefineVariable);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    declareVariable();
    setState(73);
    match(CkuraParser::EQ);
    setState(74);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionBodyContext ------------------------------------------------------------------

CkuraParser::FunctionBodyContext::FunctionBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CkuraParser::UnitContext *> CkuraParser::FunctionBodyContext::unit() {
  return getRuleContexts<CkuraParser::UnitContext>();
}

CkuraParser::UnitContext* CkuraParser::FunctionBodyContext::unit(size_t i) {
  return getRuleContext<CkuraParser::UnitContext>(i);
}


size_t CkuraParser::FunctionBodyContext::getRuleIndex() const {
  return CkuraParser::RuleFunctionBody;
}


std::any CkuraParser::FunctionBodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CkuraParserVisitor*>(visitor))
    return parserVisitor->visitFunctionBody(this);
  else
    return visitor->visitChildren(this);
}

CkuraParser::FunctionBodyContext* CkuraParser::functionBody() {
  FunctionBodyContext *_localctx = _tracker.createInstance<FunctionBodyContext>(_ctx, getState());
  enterRule(_localctx, 8, CkuraParser::RuleFunctionBody);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 3825270848) != 0) {
      setState(76);
      unit();
      setState(81);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclareVariableContext ------------------------------------------------------------------

CkuraParser::FunctionDeclareVariableContext::FunctionDeclareVariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CkuraParser::ExpressionContext* CkuraParser::FunctionDeclareVariableContext::expression() {
  return getRuleContext<CkuraParser::ExpressionContext>(0);
}

tree::TerminalNode* CkuraParser::FunctionDeclareVariableContext::Id() {
  return getToken(CkuraParser::Id, 0);
}


size_t CkuraParser::FunctionDeclareVariableContext::getRuleIndex() const {
  return CkuraParser::RuleFunctionDeclareVariable;
}


std::any CkuraParser::FunctionDeclareVariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CkuraParserVisitor*>(visitor))
    return parserVisitor->visitFunctionDeclareVariable(this);
  else
    return visitor->visitChildren(this);
}

CkuraParser::FunctionDeclareVariableContext* CkuraParser::functionDeclareVariable() {
  FunctionDeclareVariableContext *_localctx = _tracker.createInstance<FunctionDeclareVariableContext>(_ctx, getState());
  enterRule(_localctx, 10, CkuraParser::RuleFunctionDeclareVariable);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    expression(0);
    setState(83);
    match(CkuraParser::Id);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionArgumentContext ------------------------------------------------------------------

CkuraParser::FunctionArgumentContext::FunctionArgumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}
